--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "proje",
+  "name": "password-generator",
   "version": "0.0.1",
-  "description": "Projem",
+  "description": "Simple password generator.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "author": "zeykatecool",
   "license": "ISC",
